tests/dmd/fail_compilation/responsefile.d
// REQUIRED_ARGS: @ABC

/* LDC: expected output slightly adapted
TEST_OUTPUT:
---
Error: Could not read response file.
---
*/
